compiler-core/main/__parse/parse/snapshots/gleam_core____parse__parse__tests__incomplete_function.snap
---
source: compiler-core/src_refactored/__parse/parse/tests.rs
assertion_line: 757
expression: fn()
snapshot_kind: text
---
----- SOURCE CODE
fn()

----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:1:1
  │
1 │ fn()
  │ ^^^^ This function does not have a body
