compiler-core/main/__parse/parse/snapshots/gleam_core____parse__parse__tests__invalid_pattern_label_shorthand_4.snap
---
source: compiler-core/src_refactored/__parse/parse/tests.rs
assertion_line: 1564
expression: "\npub fn main() {\n  let Wibble(arg: arg:) = todo\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  let Wibble(arg: arg:) = todo
}


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:3:22
  │
3 │   let Wibble(arg: arg:) = todo
  │                      ^ I was not expecting this

Found `:`, expected one of: 
- `)`
