compiler-core/main/__parse/parse/snapshots/gleam_core____parse__parse__tests__invalid_pattern_label_shorthand_5.snap
---
source: compiler-core/src_refactored/__parse/parse/tests.rs
assertion_line: 1575
expression: "\npub fn main() {\n  let Wibble(arg1: arg2:) = todo\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  let Wibble(arg1: arg2:) = todo
}


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:3:24
  │
3 │   let Wibble(arg1: arg2:) = todo
  │                        ^ I was not expecting this

Found `:`, expected one of: 
- `)`
